# gazebo_magnet_plugin

./: LICENSE  README.md
gazebo_plugin_tutorial/: CMakeLists.txt  contact.world  sphere_contact.world
magnet_plugin/: magnet.cc
